--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
-mycargo = { path = "../hello-rocket/mycargo" }
+mycargo = { path = "mycargo" }
